src/App.css
.app {
  padding: 0 5vw;
  min-height: 80vh;
}

.loader {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--secondary-color);
}

.logo {
  width: 35px;
  height: 35px;
  margin-left: var(--spacing-md);
  content: url('./assets/github-normal.png');
}

@media (prefers-color-scheme: dark) {
  .logo {
    content: url('./assets/github-dark.png');
  }
}

.header {
  display: flex;
  align-items: center;
  gap: var(--spacing-xs);
  margin: var(--spacing-md) 0;
}

.instructions {
  margin-bottom: var(--spacing-md);
  padding-bottom: var(--spacing-xs);
  line-height: 2;
  border-bottom: 1px solid var(--secondary-color);
}

.avatar {
  display: block;
  width: 100px;
  border-radius: 50%;
}

.listItem {
  list-style: none;
  margin-left: auto;
  margin-right: auto;
}

.cardContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-xs);
  width: 200px;
  padding: var(--spacing-xs);
  border: 1px solid var(--secondary-color);
  border-radius: var(--main-border-radius);
  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.cardContainer span:first-child {
  word-break: break-all;
}

.resultsContainer {
  margin-top: var(--spacing-md);
  border-top: 1px solid var(--secondary-color);
}

.listContainer {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  padding-inline-start: 0px !important;
  row-gap: var(--spacing-sm);
}

.cardUri {
  display: flex;
  align-items: center;
  gap: calc(var(--spacing-xs) * 0.25);
  text-decoration: none;
  color: var(--font-color);
}

.formSectionTitle {
  font-size: 1.1rem;
  display: inline-block;
  width: 5rem;
}

.typeContainer {
  margin-top: var(--spacing-sm);
}

.typeContainer label:last-child {
  margin-left: var(--spacing-xs);
}

.termInput {
  text-indent: 8px;
  font-size: 1rem;
  font-family: var(--font-family);
}

.termInput::placeholder {
  font-style: italic;
}

.termInput:focus {
  outline-color: var(--main-color);
}

.termInput,
.submitBtn {
  width: 50vw;
  height: 40px;
  border-radius: calc(var(--main-border-radius) * 0.5);
}

input[type='radio'] {
  transform: scale(1.5);
  accent-color: var(--main-color);
}

.submitBtn {
  display: block;
  margin-top: var(--spacing-sm);
  margin-left: calc(var(--spacing-xs) * 5);
  cursor: pointer;
  border: 1px solid var(--main-color);
  background-color: var(--main-color);
  color: var(--btn-font-color);
}

.submitBtn:disabled {
  background-color: var(--secondary-color);
  border-color: var(--secondary-color);
  color: var(--main-color);
}

.perPage select,
.submitBtn {
  font-family: var(--font-family);
  font-size: 1.1rem;
  line-height: 1.2;
  font-weight: bold;
}

.paginationForm {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.perPage {
  margin-top: var(--spacing-md);
}

.perPage select {
  height: 40px;
  width: 100px;
  text-align: center;
}

.btnGroup {
  margin-top: var(--spacing-xs);
}

.paginationBtn {
  display: inline;
  margin: 0;
  width: 100px;
}

.feedbackContainer {
  margin-top: var(--spacing-md);
}

.pageCount {
  display: inline-block;
  margin: var(--spacing-xs);
}

.errorMsgContainer {
  display: flex;
  align-items: center;
  gap: calc(var(--spacing-xs) * 0.5);
  background-color: var(--error-text-color-op5);
  border: 1px solid var(--error-text-color-op25);
  border-radius: var(--main-border-radius);
  padding: var(--spacing-xs);
  font-weight: bold;
  color: var(--error-text-color);
}

footer {
  height: 50px;
  text-align: center;
}

@media screen and (min-width: 800px) {
  .termInput,
  .submitBtn {
    width: 30vw;
  }
  .paginationBtn {
    width: 150px;
  }
  .listItem {
    margin-left: 0;
    margin-right: 0;
  }
}

@media screen and (min-width: 300px) {
  .termInput,
  .submitBtn {
    width: 80w;
  }
}

